// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hub is falsy 1`] = `
<GradientBorder
  className="layout-column flex-100"
  content={
    <div
      className="flex layout-column"
      onClick={[Function]}
    >
      <div
        className="content layout-row layout-wrap"
      >
        <div
          className="hub_name flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <h1
            className="flex-100"
          >
             
            Nam
             
          </h1>
        </div>
        <div
          className="hub_type flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <p
            className="flex-none"
          >
            Airport
          </p>
        </div>
      </div>
      <div
        className="image flex-100 layout-row"
        style={
          Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/aerial_port_sm.jpg\\")",
          }
        }
      />
      
    </div>
  }
  data-for="RANDOM_KEY_1"
  data-tip="TOOLTIP"
  gradient={
    Object {
      "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
    }
  }
  wrapperClassName="flex-30 hub_card undefined margin_bottom layout-align-end-stretch layout-row layout-wrap pointy"
/>
`;

exports[`hub.data.hub_type is falsy 1`] = `
<GradientBorder
  className="layout-column flex-100"
  content={
    <div
      className="flex layout-column"
      onClick={[Function]}
    >
      <div
        className="content layout-row layout-wrap"
      >
        <div
          className="hub_name flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <h1
            className="flex-100"
          >
             
            Nam
             
          </h1>
        </div>
        <div
          className="hub_type flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <p
            className="flex-none"
          >
            
          </p>
        </div>
      </div>
      <div
        className="image flex-100 layout-row"
        style={
          Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/aerial_port_sm.jpg\\")",
          }
        }
      />
      
    </div>
  }
  data-for="RANDOM_KEY_5"
  data-tip="TOOLTIP"
  gradient={
    Object {
      "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
    }
  }
  wrapperClassName="flex-30 hub_card undefined margin_bottom layout-align-end-stretch layout-row layout-wrap pointy"
/>
`;

exports[`hub.data.photo is truthy 1`] = `
<GradientBorder
  className="layout-column flex-100"
  content={
    <div
      className="flex layout-column"
      onClick={[Function]}
    >
      <div
        className="content layout-row layout-wrap"
      >
        <div
          className="hub_name flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <h1
            className="flex-100"
          >
             
            Nam
             
          </h1>
        </div>
        <div
          className="hub_type flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <p
            className="flex-none"
          >
            Airport
          </p>
        </div>
      </div>
      <div
        className="image flex-100 layout-row"
        style={
          Object {
            "backgroundImage": "url(PHOTO)",
          }
        }
      />
      
    </div>
  }
  data-for="RANDOM_KEY_4"
  data-tip="TOOLTIP"
  gradient={
    Object {
      "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
    }
  }
  wrapperClassName="flex-30 hub_card undefined margin_bottom layout-align-end-stretch layout-row layout-wrap pointy"
/>
`;

exports[`shallow render 1`] = `
<GradientBorder
  className="layout-column flex-100"
  content={
    <div
      className="flex layout-column"
      onClick={[Function]}
    >
      <div
        className="content layout-row layout-wrap"
      >
        <div
          className="hub_name flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <h1
            className="flex-100"
          >
             
            Nam
             
          </h1>
        </div>
        <div
          className="hub_type flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <p
            className="flex-none"
          >
            Airport
          </p>
        </div>
      </div>
      <div
        className="image flex-100 layout-row"
        style={
          Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/aerial_port_sm.jpg\\")",
          }
        }
      />
      
    </div>
  }
  data-for="RANDOM_KEY_0"
  data-tip="TOOLTIP"
  gradient={
    Object {
      "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
    }
  }
  wrapperClassName="flex-30 hub_card undefined margin_bottom layout-align-end-stretch layout-row layout-wrap pointy"
/>
`;

exports[`showIcon is truthy 1`] = `
<GradientBorder
  className="layout-column flex-100"
  content={
    <div
      className="flex layout-column"
      onClick={[Function]}
    >
      <div
        className="hello"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      >
        <i
          className="fa fa-plane  "
          style={Object {}}
        />
      </div>
      <div
        className="content layout-row layout-wrap"
      >
        <div
          className="hub_name flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <h1
            className="flex-100"
          >
             
            Nam
             
          </h1>
        </div>
        <div
          className="hub_type flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <p
            className="flex-none"
          >
            Airport
          </p>
        </div>
      </div>
      <div
        className="image flex-100 layout-row"
        style={
          Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/aerial_port_sm.jpg\\")",
          }
        }
      />
      
    </div>
  }
  data-for="RANDOM_KEY_3"
  data-tip="TOOLTIP"
  gradient={
    Object {
      "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
    }
  }
  wrapperClassName="flex-30 hub_card undefined margin_bottom layout-align-end-stretch layout-row layout-wrap pointy"
/>
`;

exports[`showTooltip is truthy 1`] = `
<GradientBorder
  className="layout-column flex-100"
  content={
    <div
      className="flex layout-column"
      onClick={[Function]}
    >
      <div
        className="content layout-row layout-wrap"
      >
        <div
          className="hub_name flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <h1
            className="flex-100"
          >
             
            Nam
             
          </h1>
        </div>
        <div
          className="hub_type flex-100 layout-row layout-wrap layout-align-start-start"
        >
          <p
            className="flex-none"
          >
            Airport
          </p>
        </div>
      </div>
      <div
        className="image flex-100 layout-row"
        style={
          Object {
            "backgroundImage": "url(\\"https://assets.itsmycargo.com/assets/default_images/aerial_port_sm.jpg\\")",
          }
        }
      />
      <ReactTooltip
        className="tooltip"
        effect="solid"
        id="RANDOM_KEY_2"
        insecure={true}
        resizeHide={true}
        wrapper="div"
      />
    </div>
  }
  data-for="RANDOM_KEY_2"
  data-tip="TOOLTIP"
  gradient={
    Object {
      "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
    }
  }
  wrapperClassName="flex-30 hub_card undefined margin_bottom layout-align-end-stretch layout-row layout-wrap pointy"
/>
`;
